# gratho-system

./: CMakeLists.txt  README.md
.github/workflows/: common-build-and-quality.yml  pipeline-pre-production.yml
include/characters/: AncestryVisitor.h  AttributeBoost.h  DefaultSkills.h  EnumAttributes.h  EnumProficiences.h  EnumSkillRank.h  PlayerCharacterAncestry.h  PlayerCharacterClass.h  PlayerCharacterProficiency.h  PlayerCharacterSheet.h  PlayerCharacterVisitor.h  PlayerClassVisitor.h  Skill.h  SkillTrainingVisitor.h  attributeBoost.h  enumAttributes.h  enumProficiences.h  person.h  playerCharacterAncestry.h  playerCharacterClass.h  playerCharacterSheet.h  skill.h
include/items/: weapon.h
src/: main.cpp
src/characters/: AncestryVisitor.cpp  AttributeBoost.cpp  Person.cpp  PlayerCharacterAncestry.cpp  PlayerCharacterClass.cpp  PlayerCharacterProficiency.cpp  PlayerCharacterSheet.cpp  PlayerClassVisitor.cpp  Skill.cpp  SkillTrainingVisitor.cpp
src/items/: Weapon.cpp
